<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="#ff1ba9d8"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:id="@id/scrollView2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="vertical"
            android:id="@id/linearLayout3"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true" />
    </ScrollView>

    <TextView
        android:textSize="28.0dip"
        android:textColor="#ffffffff"
        android:gravity="center"
        android:id="@id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerDefualt"
        android:layout_alignTop="@id/scrollView2"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/cant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cant"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/this1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/later"
        android:layout_above="@id/cant"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button7"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/regNow"
        android:layout_above="@id/this1"
        android:layout_centerHorizontal="true" />
</RelativeLayout>