<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="#ff1ba9d8"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/linearLayout3"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true">

            <TextView
                android:textSize="24.0dip"
                android:textColor="#ffffffff"
                android:gravity="center"
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cantRegHelp"
                android:layout_alignTop="@id/scrollView2"
                android:layout_centerHorizontal="true" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/other"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cantOther"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/cantKids"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cantKids"
        android:layout_above="@id/other"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/cantMoney"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cantMoney"
        android:layout_above="@id/cantKids"
        android:layout_centerHorizontal="true" />
</RelativeLayout>